# krssg

./: README.md
catkin_ws/src/krssg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/krssg/src/: Num.h  hearer.cpp  hearer.cpp~  result.txt  result2.txt  screamer1.cpp  screamer1.cpp~  screamer2.cpp  talker1.cpp  talker1.cpp~  talker1.txt~  talker2.txt
